fixed-overflow

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,7 +1,8 @@
 .home-page {
   display: flex;
   width: 100%;
-  height: 200vh;
+  margin-bottom: 10vw;
+  margin-top: 10vw;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
